cmake_minimum_required(VERSION 3.28)
project(Leetcode_CPP)

set(CMAKE_CXX_STANDARD 17)

add_executable(Leetcode_CPP
        Practice/grammar.cpp
        FileNameGenerator.cpp
        Daily_Question/_165_Compare_Version_Numbers.cpp
        Daily_Question/_881_Boats_to_Save_People.cpp
        Daily_Question/_237_Delete_Node_in_a_Linked_List.cpp
        "Daily_Question/_2487_Remove_Nodes_From_Linked_List .cpp"
        Practice/separate.cpp
        Daily_Question/_2816_Double_a_Number_Represented_as_a_Linked_List.cpp
        Daily_Question/_506_Relative_Ranks.cpp
        Daily_Question/_3075_Maximize_Happiness_of_Selected_Children.cpp
        Daily_Question/_786_K_th_Smallest_Prime_Fraction.cpp
        Daily_Question/_2373_Largest_Local_Values_in_a_Matrix.cpp
        Daily_Question/_861_Score_After_Flipping_Matrix.cpp
        Daily_Question/_1219_Path_with_Maximum_Gold.cpp)
